In this table sp(2n) is just a generic name, no need for \RR

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -142,7 +142,6 @@ Five exceptions with $\dim(\lie{E}_6)=78$, $\dim(\lie{E}_7)=133$, $\dim(\lie{E}_
 
 \paragraph{Real case.}\hspace{0pt minus 1pt}  Let
 $\lie{sl}(n)=\lie{sl}(n,\RR)$,
-%$\lie{sp}(2n)=\lie{sp}(2n,\RR)$,
 $\lie{su}^*(2n)=\lie{sl}(n,\HH)$,
 $\lie{so}^*(2n)=\lie{o}(n,\HH)$,
 $\lie{usp}(2m,2n)=\lie{u}(m,n,\HH)$.
@@ -162,7 +161,7 @@ In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})
 & $\lie{so}(p,n-p)$& $\lie{so}(p)\oplus \lie{so}(n-p)$ & $0<p<n$ \\
 & $\lie{so}^*(2n)$   & $\lie{u}(n)$ & $n$ even \\
 \midrule
-\multirow{3}{*}{\rotatebox{90}{$\!\!\!\lie{sp}(2n,\RR)\!\!$}}
+\multirow{3}{*}{\rotatebox{90}{$\lie{sp}(2n)$}}
 & $\lie{usp}(2n)$ & compact & \\
 & $\lie{sp}(2n,\RR)$  & $\lie{u}(n)$ & \\
 & $\lie{usp}(2n-2p,2p)$ & $\lie{usp}(2n-2p)\oplus \lie{usp}(2p)$ & $0<p<n$ \\
