--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -144,7 +144,7 @@ Five exceptions with $\dim(\lie{E}_6)=78$, $\dim(\lie{E}_7)=133$, $\dim(\lie{E}_
 $\lie{sl}(n)=\lie{sl}(n,\RR)$,
 $\lie{su}^*(2n)=\lie{sl}(n,\HH)$,
 $\lie{so}^*(2n)=\lie{o}(n,\HH)$,
-$\lie{usp}(2m,2n)=\lie{u}(m,n,\HH)$.
+$\lie{sp}(m,n)=\lie{usp}(2m,2n)=\lie{u}(m,n,\HH)$.
 A Lie algebra is compact if it exponentiates to a compact Lie group.
 In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})$ generators.
 \begin{tab}{@{}c@{ }lll}
@@ -197,11 +197,11 @@ In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})
 \paragraph{Accidental isomorphisms.}
 \begin{center}
 \vspace{-2.5\baselineskip}
-\begin{minipage}[t]{.55\linewidth}
+\begin{minipage}[t]{.6\linewidth}%
 \begin{align*}
 \lie{so}(2)&= \lie{u}(1), \quad \lie{so}(1,1)=\RR\\
 \lie{so}(3)&= \lie{su}(2)=\lie{su}^*(2)\\
-\lie{so}(2,1) &=\lie{su}(1,1)=\lie{sl}(2)=\lie{sp}(2,\mathrlap{\RR)}\\
+\lie{so}(2,1) &=\lie{su}(1,1)=\lie{sl}(2)=\lie{sp}(2,\RR)\\
 \lie{so}(4)&=\lie{su}(2)\oplus \lie{su}(2)\\
 \lie{so}(3,1)&=\lie{sl}(2,\CC)=\lie{sp}(2,\CC)\\
 \lie{so}(2,2)&=\lie{sl}(2)\oplus \lie{sl}(2)\\
@@ -209,7 +209,7 @@ In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})
 \lie{so}(5)&=\lie{usp}(4)
 \end{align*}
 \end{minipage}%
-\begin{minipage}[t]{.45\linewidth}
+\begin{minipage}[t]{.4\linewidth}
 \begin{align*}
 \lie{so}(4,1)&=\lie{usp}(2,2)\\
 \lie{so}(3,2)&=\lie{sp}(4,\RR)\\
