Add isomorphism of su(2) and usp(2)

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -200,7 +200,7 @@ In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})
 \begin{minipage}[t]{.6\linewidth}%
 \begin{align*}
 \lie{so}(2)&= \lie{u}(1), \quad \lie{so}(1,1)=\RR\\
-\lie{so}(3)&= \lie{su}(2)=\lie{su}^*(2)\\
+\lie{so}(3)&= \lie{su}(2)=\lie{su}^*(2)=\lie{usp}(2)\\
 \lie{so}(2,1) &=\lie{su}(1,1)=\lie{sl}(2)=\lie{sp}(2,\RR)\\
 \lie{so}(4)&=\lie{su}(2)\oplus \lie{su}(2)\\
 \lie{so}(3,1)&=\lie{sl}(2,\CC)=\lie{sp}(2,\CC)\\
