--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -17,7 +17,7 @@
 \usetikzlibrary{matrix}
 \usepackage{stackengine}
 \usepackage{etoolbox}
-\usepackage{mathabx}
+%\usepackage{mathabx}
 \usepackage{graphicx}
 
 \hypersetup{unicode}
@@ -44,13 +44,29 @@
 \setlength{\parskip}{2pt plus 2pt minus 2pt}
 \setlength{\baselineskip}{10pt}
 
-\newcommand{\actson}{\mathrel{\reflectbox{$\righttoleftarrow$}}}
+\newcommand{\tabfoot}[1]{\leavevmode\ensuremath{{}^{\tabfootsymb{#1}}}}
+\makeatletter
+\newcommand{\tabfootsymb}[1]{\ensuremath{\scriptstyle\@fnsymbol{\the\numexpr(#1)+2\relax}}}
+\makeatother
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% http://tex.stackexchange.com/questions/14386/importing-a-single-symbol-from-a-different-font
+\DeclareFontFamily{U}{mathb}{\hyphenchar\font45}
+\DeclareFontShape{U}{mathb}{m}{n}{
+      <5> <6> <7> <8> <9> <10> gen * mathb
+      <10.95> mathb10 <12> <14.4> <17.28> <20.74> <24.88> mathb12
+      }{}
+\DeclareSymbolFont{mathb}{U}{mathb}{m}{n}
+\DeclareFontSubstitution{U}{mathb}{m}{n}
+\DeclareMathSymbol{\righttoleftarrow}{3}{mathb}{"FD}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\newcommand{\defined}[1]{\emph{#1}}
+%\newcommand{\defined}[1]{\textsl{#1}}
+\newcommand{\actson}{\mathrel{\reflectbox{$\righttoleftarrow$}}}
 \newcommand{\dd}[2][]{\mathop{\mathrm{d}\mkern0mu\relax#1#2}}%\mkern avoids \mathop{d} (vertical placement issue)
 \newcommand{\ie}{i.e.\@}
+\newcommand{\eg}{e.g.\@}
+\newcommand{\Eg}{E.g.\@}
 \makeatletter
 \newcommand{\etc}{etc.\@ifnextchar.{\@gobble}{\@}}
 \makeatother
@@ -69,6 +85,7 @@
 \newcommand{\HH}{\mathbb{H}} % quaternions
 \newcommand{\PP}{\mathbb{P}} % projective
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclareMathOperator{\End}{End}
 
 \ExplSyntaxOn
 \newcommand{\Lie}[1]{
@@ -245,15 +262,15 @@ Here, $m,n\geq 1$, $0\leq p\leq m/2$, $0\leq q\leq n/2$.
 The forms $\lie{su}^*$, $\lie{osp}^*$, $\lie{Q}^*$ only exist for even rank; $\lie{sl}'$ only if $m=n$.
 \begin{tab}{*{2}{>{$}l<{$}}}
 \text{Real form} & \text{Bosonic algebra}  \\ \midrule
-\lie{su}(m-p,p|n-q,q) & \lie{su}(m-p,p)\oplus \lie{su}(n-q,q)\oplus \lie{u}(1)^{\mathsection}\\
-\lie{sl}(m|n) & \lie{sl}(m)\oplus \lie{sl}(n)\oplus \lie{so}(1,1)^{\mathsection} \\
+\lie{su}(m-p,p|n-q,q) & \lie{su}(m-p,p)\oplus \lie{su}(n-q,q)\oplus \lie{u}(1)\tabfoot{1}\\
+\lie{sl}(m|n) & \lie{sl}(m)\oplus \lie{sl}(n)\oplus \lie{so}(1,1)\tabfoot{1} \\
 \lie{sl}'(n|n) \quad\, (m=n)& \lie{sl}(n,\CC)\\
-\lie{su}^*(m|n) \:\: (m,n \text{ even}) & \lie{su}^*(m)\oplus \lie{su}^*(n)\oplus \lie{so}(1,1)^{\mathsection}\\
+\lie{su}^*(m|n) \:\: (m,n \text{ even}) & \lie{su}^*(m)\oplus \lie{su}^*(n)\oplus \lie{so}(1,1)\tabfoot{1}\\
 \midrule
 \lie{osp}(m-p,p|2n) & \lie{so}(m-p,p)\oplus \lie{sp}(2n,\RR) \\
 \multicolumn{2}{l}{$\lie{osp}^*(m|2n-2q,2q)$ ($m$ even)\quad $\lie{so}^*(m)\oplus \lie{usp}(2n-2q,2q)$} \\
 \midrule
-\lie{D}^p(2,1,\alpha) \;^{\mathparagraph} & \lie{so}(4-p,p)\oplus \lie{sl}(2)\quad (p=0,1,2)\\
+\lie{D}^p(2,1,\alpha) \;\tabfoot{2} & \lie{so}(4-p,p)\oplus \lie{sl}(2)\quad (p=0,1,2)\\
 \midrule
 \lie{F}^p(4) \text{ for $p=0,3$} & \lie{so}(7-p,p)\oplus \lie{sl}(2) \\
 \lie{F}^p(4) \text{ for $p=1,2$} & \lie{so}(7-p,p)\oplus \lie{su}(2) \\
@@ -267,11 +284,11 @@ The forms $\lie{su}^*$, $\lie{osp}^*$, $\lie{Q}^*$ only exist for even rank; $\l
 \lie{Q}^*(m) \quad (m \text{ odd}) & \lie{su}^*(m+1) \\
 \end{tab}
 
-$^{\mathsection}$
+\tabfoot{1}
 For $m=n$, $\lie{u}(1)$ and $\lie{so}(1,1)$ factors are absent.
 Additionally, one can project down to a single bosonic factor.
 
-$^{\mathparagraph}$
+\tabfoot{2}
 The three $\lie{sl}(2)$ bosonic factors of $\lie{D}(2,1,\alpha)$ appear with weights $1$, $\alpha$ and $-1-\alpha$ in fermion anticommutators.
 For $\lie{D}^0$ and $\lie{D}^2$, $\alpha$ is real.  For $\lie{D}^1$, $\alpha=1+ia$ with $a$ real.
 
@@ -281,8 +298,14 @@ For $\lie{D}^0$ and $\lie{D}^2$, $\alpha$ is real.  For $\lie{D}^1$, $\alpha=1+i
 $\lie{su}(1,1|1)=\lie{sl}(2|1)=\lie{osp}(2|2)$
 and $\lie{su}(2|1)=\lie{osp}(2^*|2,0)$
 and $\lie{D}^p(2,1,\alpha=1)=\lie{osp}(4-p,p|2)$.
+% todo: complete this list
+
+% todo: section on representations of complex Lie algebras
+% todo: representations of real Lie algebras
 
 % todo: section on Lie groups here
+% todo: Name "USp(2n)=Sp(n)" the compact symplectic group
+% todo: Ph. Spindel, A. Sevrin, W. Troost, A. Van Proeyen (1988), D. Joyce (1992) construct (all) left-invariant hypercomplex structures on (simply-connected?) compact (reductive?) Lie groups: any simple Lie groups become ``left-invariantly hypercomplex'' once multiplied by an appropriate torus.
 
 \section{Spinors}
 
@@ -456,9 +479,7 @@ $6$&$ \lie{osp}(8^*|N) $ &$  \lie{usp}(N)\ \ (N $ even)& $8N$ \\
 
 \section{Types of manifolds}
 
-% todo: symmetric spaces? https://en.wikipedia.org/wiki/Symmetric_space
-
-\paragraph{A $G$-structure} on a manifold~$X$ (with
+\paragraph{Structure group.} A $G$-structure on a manifold~$X$ (with
 $n=\dim_{\RR}X$) is a $G$-subbundle of the
 $\Lie{GL}(n,\RR)$-principal bundle $\Lie{GL}(TX)$ of tangent
 frames, namely a global section of $\Lie{GL}(TX)/G$.
@@ -466,28 +487,35 @@ frames, namely a global section of $\Lie{GL}(TX)/G$.
 A manifold is oriented if it has a $\Lie{GL}^+(n,\RR)=\{\det>0\}$
 structure.  Similar definitions for Riemannian manifolds \etc:
 \begin{tab}{@{ }l@{ \ }l@{ \ }l@{ }}
-  Manifold type & $G$-structure & Other characterization \\
+  Manifold type & $G$-structure & Other characterization\tabfoot{1} \\
   \midrule
   Riemannian & $\Lie{O}(n)$ & Symmetric metric $g>0$ \\
+  Almost complex & $\Lie{GL}(n/2,\CC)$ & $\CC\actson TX$ (\ie, $J^2=-1$) \\
   Almost symplectic & $\Lie{Sp}(2n/2,\RR)$ & Non-degenerate $\omega\in\Omega^2X$\\
-  Almost complex & $\Lie{GL}(n/2,\CC)$ & $J:TX\to TX$, $J^2=-1$ \\
-  Almost Hermitian & $\Lie{U}(n/2)$ & Two compatible $(\omega,J,g)$ \\
-  \rlap{Almost hypercomplex} & & Action $\HH\actson TX$ \\
+  Almost Hermitian & $\Lie{U}(n/2)$ & Two compatible $(\omega,J,g)$\tabfoot{3} \\
+  \rlap{Almost hypercomplex\tabfoot{2} $\Lie{U}^*(n/2)$} & & $\HH\actson TX$ \\
 \end{tab}
+\noindent\tabfoot{1} All sections are global.  For instance an almost complex
+structure is a global section $J$~of $\End TX$ with $J^2=-1$.
+
+% todo: in the table, which of almost (quaternionic|hyper)(complex|Hermitian) to include?
+
+\noindent\tabfoot{2} Almost hypercomplex manifolds, also called
+quaternionic, require global $J_1,J_2,J_3:TX\to TX$ with
+$J_i^2=J_1J_2J_3=-1$.
+
+\noindent\tabfoot{3}
 Any two of $(\omega,J,g)$ fix the third by $\omega_{ik} = J_{i}{}^{j}
 g_{jk}$ if they are compatible: $J_{i}{}^{j}J_{l}{}^{k}\omega_{jk} =
 \omega_{il}$ or $J_{i}{}^{j}J_{l}{}^{k}g_{jk} = g_{il}$ namely $\omega$
 or $g$ is $J$-invariant, or $\omega_{ij}g^{jk}\omega_{kl} = - g_{il}$.
-On a holomorphic chart, $\omega = \frac{\I}{2} h_{\beta\bar{\gamma}}
-\dd{z^\beta} \wedge \dd{\bar{z}^{\bar{\gamma}}}$ and $g = \frac{1}{2}
-h_{\beta\bar{\gamma}} (\dd{z^\beta} \otimes \dd{\bar{z}^{\bar{\gamma}}}
-+ \dd{\bar{z}^{\bar{\gamma}}} \otimes \dd{z^\beta})$.
+In a basis $e^\beta,\bar{e}^{\bar{\gamma}}$
+($=\dd{z^\beta},\dd{\bar{z}^{\bar{\gamma}}}$ for Hermitian manifolds) of
+$(1,0)$ and $(0,1)$ forms, $\omega = \frac{\I}{2} h_{\beta\bar{\gamma}}
+\, e^\beta \! \wedge \bar{e}^{\bar{\gamma}}$ and $g = \frac{1}{2}
+h_{\beta\bar{\gamma}} (e^\beta \otimes \bar{e}^{\bar{\gamma}} +
+\bar{e}^{\bar{\gamma}} \otimes e^\beta)$.
 
-Since $\Lie{GL}(n,\RR)/O(n)$ is contractible, any manifold admits
-(non-canonically) a Riemannian structure, namely a smooth choice of
-which frames are orthonormal, \ie, a Riemannian metric~$g$.  Similarly
-$\Lie{GL}(n/2,\CC)/U(n/2)$ is contractible so almost complex
-manifolds admit almost Hermitian structures.
 
 On an almost complex manifold, $(p,q)$-forms are wedge products
 $\Omega^{(p,q)}X = \Wedge^p\bigl(\Omega^{(1,0)}X\bigr) \wedge
@@ -499,7 +527,11 @@ $\dd[^{i,j}]{}:\Omega^{(p,q)}\to\Omega^{(p+i,q+j)}$.  Dolbeault
 differential operators are $\del=\dd[^{1,0}]{}$ and
 $\delbar=\dd[^{0,1}]{}$.
 
-\paragraph{A $G$-structure is $k$-integrable} (resp.\@ integrable) near
+An almost symplectic $2m$-manifold admits the volume form $\omega^m/m!$.
+On an almost Hermitian manifold~$X$ it is equal to the Riemannian volume
+form and belongs to $\Omega^{(m,m)}X$.
+
+\paragraph{Integrability.} A $G$-structure is $k$-integrable (resp.\@ integrable) near
 $x\in X$ if it can be trivialized to order~$k$ (resp.\@ all orders) in a
 neighborhood of~$x$.  We automatically have $0$-integrability.
 
@@ -522,49 +554,75 @@ Equivalently, it is $1$-integrable: $\dd{\omega}=0$.  Altogether,
      general & & \stackanchor{almost}{symplectic} & & symplectic \\
      & \clap{Riemannian} & & & \\
      \stackanchor{almost}{complex} & & \stackanchor{almost}{Hermitian} & & \stackanchor{almost}{K\"ahler} \\
-     & & & & \\
+%     & & & & \\
      complex & & Hermitian & & K\"ahler\\};
   \path[-stealth]
-    (m-1-1) edge node [above] {$\omega$} (m-1-3)
-    (m-1-1) edge node [left] {$\exists g$} (m-2-2)
-    (m-1-1) edge node [left] {$J$} (m-3-1)
-    (m-1-3) edge node [above] {$\dd{\omega}=0$} (m-1-5)
-    (m-1-3) edge node [right] {$J$/$g$} (m-3-3)
-    (m-1-5) edge node [right] {$J$} (m-3-5)
-    (m-2-2) edge node [left] {$J$/$\omega$} (m-3-3)
-    (m-3-1) edge node [below] {$\omega$/$g$} (m-3-3)
-            edge node [right] {$N_J=0$} (m-5-1)
-    (m-3-3) edge node [above] {$\dd{\omega}=0$} (m-3-5)
-            edge node [right] {$N_J=0$} (m-5-3)
-    (m-3-5) edge node [right] {$N_J=0$} (m-5-5)
-    (m-5-1) edge node [above] {$\omega$} (m-5-3)
-    (m-5-3) edge node [above] {$\dd{\omega}=0$} (m-5-5)
+    (m-1-1) edge node [above=-.5ex] {\footnotesize $\omega$} (m-1-3)
+    (m-1-1) edge node [right=.1em] {\footnotesize $g$\tabfootsymb{1}} (m-2-2)
+    (m-1-1) edge node [left=-.3em] {\footnotesize $J$} (m-3-1)
+    (m-1-3) edge node [above=-.5ex] {\footnotesize $\dd{\omega}=0$} (m-1-5)
+    (m-1-3) edge node [right=-1em] {\footnotesize $J$ or $g$} (m-3-3)
+    (m-1-5) edge node [left=-.3em] {\footnotesize $J$} (m-3-5)
+    (m-2-2) edge node [right=-1em] {\footnotesize $\omega$\, or $J$} (m-3-3)
+    (m-3-1) edge node [above=-.7ex] {\footnotesize $\omega$ or $g$\tabfootsymb{1}} (m-3-3)
+            edge node {\footnotesize $N_J=0$} (m-4-1)
+    (m-3-3) edge node [above=-.5ex] {\footnotesize $\dd{\omega}=0$} (m-3-5)
+            edge node {\footnotesize $N_J=0$} (m-4-3)
+            edge node [above=-.7ex] {\tabfootsymb{2}} (m-4-5)
+    (m-3-5) edge node {\footnotesize $N_J=0$} (m-4-5)
+    (m-4-1) edge node [above=-.7ex] {\footnotesize $\omega$ or $g$\tabfootsymb{1}} (m-4-3)
+    (m-4-3) edge node [above=-.5ex] {\footnotesize $\dd{\omega}=0$} (m-4-5)
     ;
   \pgfresetboundingbox
-  \path [use as bounding box] (m-3-1.west |- m-1-3.north) rectangle (m-1-5.east |- m-5-3.south);
+  \path [use as bounding box] (m-3-1.west |- m-1-3.north) rectangle (m-1-5.east |- m-4-3.south);
 \end{tikzpicture}
 \end{tab}
+(Almost) hyper-(complex/Hermitian/K\"ahler) manifolds are defined by
+replacing~$J$ by a triplet with
+$J_i^2=J_1J_2J_3=-1$.  (Almost)
+quaternionic-(complex/Hermitian/K\"ahler) allow the $J_i$ to be locally
+defined but spanning a globally defined 3d~subbundle of $\End TX$.
+% ref: math/0105206
 
-% A $\Lie{G}_2$-manifold is a $7$-dimensional manifold with a
-% $1$-integrable $\Lie{G}_2\to\Lie{GL}(7)$ structure namely the
-% corresponding definite 3-form $\omega$ should be covariantly constant
-% with respect to the induced Riemannian metric (due to
-% $\Lie{G}_2\subset O(7)$.  Equivalently it is a Riemannian $7$-manifold
-% with special holonomy $\subseteq\Lie{G}_2$.
+% \noindent
+% (Almost) quaternionic-(complex/Hermitian/K\"ahler) manifolds are defined
+% by replacing~$J$ by a 3d~subbundle of $\End TX$
+% with a local basis of sections~$J_i$ obeying $J_i^2=J_1J_2J_3=-1$.
+% (Almost) hyper-(complex/Hermitian/K\"ahler) manifolds require global
+% sections~$J_i$.
 
+
+% \noindent
+% Analogous manifolds with $J$~replaced by three almost complex structures
+% with $J_1J_2=J_3$, are called (almost)
+% hyper-(complex/Hermitian/K\"ahler).  Allowing the $J_i$ to only be local
+% but spanning a globally defined three-dimensional subbundle of $\End TX$
+% yields (almost) quaternionic-(complex/Hermitian/K\"ahler) manifolds.
+
+% the (almost) complex
+
+%  with the action
+% of~$\mathbb{C}$ on tangent spaces replaced by an action the of
+% quaternions~$\mathbb{H}$, namely three (almost) complex structures $I$,
+% $J$, $K$ with $IJ=K$.  The manifolds are called (almost) hypercomplex,
+% (almost) .
+
+\noindent\tabfoot{1}
+Since $\Lie{GL}(n,\RR)/O(n)$ is contractible, any manifold admits
+(non-canonically) an $O(n)$-structure, namely a smooth choice of
+which frames are orthonormal, \ie, a Riemannian metric~$g$.  Similarly
+$\Lie{GL}(n/2,\CC)/U(n/2)$ is contractible so almost complex
+manifolds admit almost Hermitian structures.
+
+\noindent\tabfoot{2}
 An almost Hermitian manifold is K\"ahler if (equivalently) its
 $U(n/2)$-structure is $1$-integrable; $\dd{\omega}=0$ and $N_J=0$;
 $\nabla\omega=0$; $\nabla J=0$; or the holonomy group is in $U(n/2)$.
+Locally, $\omega=\I\del\delbar\rho$ for some real-valued K\"ahler
+potentials~$\rho$, and $\omega$~is invariant under K\"ahler transformations
+$\rho\to\rho+f(z)+\bar{f}(\bar{z})$.
 
-\todo{Volume form on an almost Hermitian matrix: $\omega^n/n!$.}
 
-\todo{Hypercomplex structure, that is, three compatible complex
-  structures $I$, $J$, $K$.  Almost hypercomplex structure when
-  non-integrable?}
-
-\todo{The product of any reductive (connected? simply-connected?)
-  compact Lie group by some appropriate torus admits a left-invariant
-  hypercomplex structure.}
 
 \paragraph{The holonomy group} at $x\in X$ of a connection~$\nabla$ on a
 bundle $E\to X$ is the group of symmetries of~$E_x$ arising from
@@ -576,32 +634,86 @@ $\Lie{O}(n)$ \big(or $\Lie{SO}(n)$ for $X$~orientable\big) since
 parallel transport preserves orthogonality ($\nabla g=0$).
 
 If the holonomy group acts reducibly on the tangent space then~$X$ is
-locally a product; if $X$~is geodesically complete this holds globally.
-Otherwise, assuming~$X$ is simply connected and not locally a symmetric
-space, \href{https://ncatlab.org/nlab/show/Berger\%27s+theorem}{Berger's
-  theorem} allows
+locally (globally if $X$~is geodesically complete) a product.  Simply
+connected~$X$ that are locally neither products nor symmetric spaces (we
+give a list later) can have the following special holonomy subgroups of
+$\Lie{SO}(n)$
+(\href{https://ncatlab.org/nlab/show/Berger\%27s+theorem}{Berger's
+  theorem})
 \begin{tab}{lll}
   Holonomy & Manifold type & $\dim_{\RR}$\\
   \midrule
-  $\Lie{SO}(n)$ & orientable & $n$ \\
+  % $\Lie{SO}(n)$ & orientable & $n$ \\
   $\Lie{U}(m)$ & K\"ahler & $2m$ \\
   $\Lie{SU}(m)$ & Calabi--Yau CY$_m$ & $2m$ \\
-  $\bigl(\Lie{Sp}(k)\times\Lie{Sp}(1)\bigr)/\cyclic{2}$ & quaternionic K\"ahler & $4k$ \\
-  $\Lie{Sp}(k)$ & hyper-K\"ahler & $4k$ \\
+  \midrule
+  $\bigl(\Lie{USp}(2k)\times\Lie{USp}(2)\bigr)/\cyclic{2}$ & quaternionic K\"ahler & $4k$ \\
+  $\Lie{USp}(2k)$ & hyperK\"ahler & $4k$ \\
+  \midrule
   $\Lie{Spin}(7)$ & $\Lie{Spin}(7)$ manifold & $8$ \\
   $\Lie{G}_2$ & $\Lie{G}_2$ manifold & $7$ \\
 \end{tab}
-% todo: Sp(k)=U(k,\HH)? is this USp?
 % todo: write Sp(k)<SU(2k).
 % more at https://en.wikipedia.org/wiki/Holonomy
 % perhaps http://projecteuclid.org/euclid.jdg/1090351387 interesting?
+%
+Note that $\Lie{U}(m)\supset\Lie{SU}(m)\supset\Lie{USp}(m)$ implies that
+all hyperK\"ahler manifolds are Calabi--Yau and thus K\"ahler.
+In general, quaternionic-K\"ahler manifolds are not K\"ahler.
 
-% Todo double check Kähler ⊃ Calabi-Yau ⊃ hyper-Kähler.
+% A $\Lie{G}_2$-manifold is a $7$-dimensional manifold with a
+% $1$-integrable $\Lie{G}_2\to\Lie{GL}(7)$ structure namely the
+% corresponding definite 3-form $\omega$ should be covariantly constant
+% with respect to the induced Riemannian metric (due to
+% $\Lie{G}_2\subset O(7)$.  Equivalently it is a Riemannian $7$-manifold
+% with holonomy group~$\subseteq\Lie{G}_2$.
+
+A \href{http://en.wikipedia.org/wiki/Calabi-Yau_manifold}{Calabi--Yau
+  manifold} is a K\"ahler manifold such that (equivalently) some
+K\"ahler metric has global holonomy group in $\Lie{SU}(m)$; the
+structure group can be reduced to $\Lie{SU}(m)$; or the holomorphic
+canonical bundle is trivial \ie, there exists a nowhere vanishing
+holomorphic top-form.  A weaker set of equivalent conditions
+
+\todo{here}
+
+For simply connected manifolds, the conditions above are equivalent to
+the following (always equivalent) conditions on~$X$: some K\"ahler
+metric has local holonomy group in $\Lie{SU}(m)$; some K\"ahler metric
+has vanishing Ricci curvature; the first real Chern class vanishes; a
+positive power of the holomorphic canonical bundle is trivial; $X$~has a
+finite cover with trivial holomorphic canonical bundle; $X$~has a finite
+cover equal to the product of a torus and a simply connected manifold
+with trivial holomorphic canonical bundle.
 
 
-% more on http://mathworld.wolfram.com/Hyper-KaehlerManifold.html
+% todo: more on http://mathworld.wolfram.com/Hyper-KaehlerManifold.html
+
+% todo: more on Laplacians on Kähler manifolds at Wikipedia
+
+% todo: HyperK\"ahler manifolds admit a holomorphic symplectic form
+
+% todo: Kodaira's classification of complex surfaces
+
+% todo: complex submanifold of a Kähler manifold is Kähler, in particular projective algebraic varieties and Stein manifolds
+
+% todo: Einstein manifold R=λg (but is λ constant?)
+
+% todo: Kähler--Einstein manifold
+
+% todo: self-dual Einstein manifolds
+
+% Every quaternionic-K\"ahler manifold is locally almost hypercomplex
+
+% Every quaternionic-K\"ahler manifold is Einstein
+
+% A quaternionic-K\"ahler with zero scalar curvature is locally hyper-K\"ahler
+
+% Compact hyperHermitian $4$-manifolds are conformal to tori, Hopf or K3. [ DOI: 10.2307/2046051 , Stable URL: http://www.jstor.org/stable/2046051 ]
 
 \paragraph{Symmetric spaces} \todo{list missing}
+
+% todo: symmetric spaces? https://en.wikipedia.org/wiki/Symmetric_space
 
 \paragraph{K3 surfaces} are the only CY$_2$: they have holonomy
 $\Lie{SU}(2)$.
@@ -610,6 +722,8 @@ $\Lie{SU}(2)$.
 manifold~$X$ of $\dim_{\CC}X>1$ and vanishing real first Chern class.
 Any real class $H^{1,1}(X,\CC)$ of positive norm contains a unique
 K\"ahler form whose metric is Ricci flat.
+
+(from Wikipedia on Calabi conjecture: ``The Calabi conjecture states that a compact Kähler manifold has a unique Kähler metric in the same class whose Ricci form is any given 2-form representing the first Chern class.'')
 
 \section{Data for supersymmetric gauge theories}
 
@@ -637,10 +751,10 @@ In this table ``type~IIA'' \etc{} refer to string theories not supergravities
 surfaces of trivial canonical bundle.  They have $h^{1,0}=0$ (in
 contrast to~$T^4$ which has \todo{value}).  Their first Chern class
 $c_1\in H^2(X,\ZZ)$ thus vanishes.  By Yau's theorem there exists a
-Ricci flat metric, whose holonomy is then $\Lie{SU}(2)=\Lie{Sp}(1)$ by
+Ricci flat metric, whose holonomy is then $\Lie{SU}(2)=\Lie{USp}(2)$ by
 Berger's classification.
 % todo: which Sp?
-K3~surfaces are thus Calabi--Yau (CY$_2$) and hyper-K\"ahler (hK$_4$).
+K3~surfaces are thus Calabi--Yau (CY$_2$) and hyperK\"ahler (hK$_4$).
 Their moduli space is connected and they are all diffeomorphic.
 
 \paragraph{Examples of K3~surfaces.} Quartic hypersurface in~$\PP^4$.
